# claude-codes

./: .env.example  .gitignore  CLAUDE.md  README.md  current_time.py  docstring_optimization_simple.py  head.html  notebook.py  prompt.md  pyproject.toml  simple_agent.py  simple_agent_flow.md
prompts/: BEST_PRACTICES.md  broken_file.py  code_editor_fix.md
public/: head.html  instructions.md
