[project]
name = "coding-agent"
version = "0.1.0"
description = "A simple coding agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.60.0",
    "black>=25.1.0",
    "marimo>=0.14.16",
    "python-dotenv>=1.1.1",
    "uv>=0.8.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["simple_agent", "notebook"]

[tool.poetry]
package-mode = false